--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />Federation University, Australia</p>
+              <p>Bachelors of IT(Networking & Security)<br />Federation University, Australia</p>
             </div>
           </div>
           <div class="text-container">
