--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Siratul</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Pursuing IT @Federation University | Networking & Cybersecurity</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -127,7 +127,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Pursuing IT @Federation University | Networking & Cybersecurity</h2>
+            <h2 class="experience-sub-title">Frontend Development</h2>
             <div class="article-container">
               <article>
                 <img
