--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Siratul</h1>
-        <p class="section__text__p2">Pursuing IT @Federation University | Networking & Cybersecurity</p>
+        <p class="section__text__p2">Pursuing IT @Federation University <br> Networking & Cybersecurity</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
