--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profile-pic.png" alt="Siratul Azim profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -71,6 +71,8 @@
           />
         </div>
       </div>
+  
+    
     </section>
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
