--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Frontend Development</p>
+              <p>Aspiring Cybersecurity Analyst <br />Cybersecurity Intern (Self-Directed Projects)</p>
             </div>
             <div class="details-container">
               <img
