--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Aspiring Cybersecurity Analyst <br />Cybersecurity Intern (Self-Directed Projects)</p>
+              <p>Aspiring Cybersecurity Analyst <br />Cybersecurity Intern <br> (Self-Directed Projects)</p>
             </div>
             <div class="details-container">
               <img
@@ -108,10 +108,13 @@
           </div>
           <div class="text-container">
             <p>
-              Passionate front-end web developer with expertise in HTML, CSS, and JavaScript. 
-              Dedicated to creating visually appealing and user-friendly websites. Collaborative team 
-              player with strong problem-solving skills. Constantly exploring new technologies and trends. 
-              Outside of coding, enjoys hiking, photography, and staying connected with the developer community.
+              My name is Siratul, and I am passionate about cybersecurity, risk management, and network security. I am currently pursuing a Bachelor's degree in 
+              Cyber Forensics and Information Security at Federation University, 
+              where I am currently enrolled in IT (Networking & Security).
+              With a strong foundation in IT and programming, I have developed skills in Python, Java, and network security protocols. I have also participated in
+              various coding competitions and CTF challenges, which have honed my problem-solving abilities and technical proficiency.
+              I am eager to apply my knowledge and skills to protect organizations from cyber threats and contribute to a safer digital environment. 
+              I am particularly interested in roles that involve threat analysis, incident response, and the development of secure systems.
             </p>
           </div>
         </div>
@@ -322,7 +325,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Siratul-Azim'"
               >
                 Github
               </button>
