--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Skills</h2>
             <div class="article-container">
               <article>
                 <img
@@ -163,7 +163,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>Python</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -174,7 +174,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
+                  <h3>Java</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -185,7 +185,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
+                  <h3>UX Design</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -196,8 +196,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
+                  <h3>AWS</h3>
+                  <p></p>
                 </div>
               </article>
             </div>
