--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 />
                 <div>
                   <h3>Java</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
