--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href=/assets/SIRATUL Resume.pdf'./#contact'">
+          <button class="btn btn-color-1" onclick="location.href=/assets/.pdf'./#contact'">
             Contact Info
           </button>
         </div>
